--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
- 
+h4 {
+	padding: 10px;
+	border: 1px solid black;
+	font-weight: 100;
+}
+
+p {
+	padding: 10px;
+	border: 1px solid black;
+	font-weight: 100;
+}
+
+img {
+	float: left;
+	margin: 0%;
+}
